[tool.poetry]
name = "hanmoto"
version = "0.0.2"
authors = ["Kota Usuha <kouta528bado@yahoo.co.jp>"]
description = "hanmoto makes your esc/pos printer accessible through Web API endpoint and offers you easy to use python esc/pos printer interface."
readme = "README.md"
repository = "https://github.com/argonism/hanmoto.git"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-dotenv = "^0.21.0"
python-twitter-v2 = "^0.8.1"
escpos = "^1.9"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.1"
httpx = "^0.23.3"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__",]
max-complexity = 10
